--- a/templates/config.json.j2
+++ b/templates/config.json.j2
@@ -10,7 +10,7 @@
     "api_addr": "http://192.168.15.11:8200",
     "storage": {
         "file": {
-        "path" : "/{{ vault_data_path }}"
+        "path" : "{{ vault_data_path }}"
         }
      },
     "max_lease_ttl": "10h",
