--- a/templates/unseal.sh.j2
+++ b/templates/unseal.sh.j2
@@ -12,4 +12,5 @@ root_token=$(sed -n 4p "$initfile" | cut -d':' -f2 | tr -d '[:space:]')
 vault operator unseal $key_1 && vault operator unseal $key_2
 
 #provision jenkins secret
-vault login $root_token
+echo root token $root_token
+vault login $root_token && vault write secrets/jenkins username=admin password=$(date +%s | sha256sum | base64 | head -c 32 ; echo)
