--- a/templates/unseal.sh.j2
+++ b/templates/unseal.sh.j2
@@ -13,4 +13,4 @@ vault operator unseal $key_1 && vault operator unseal $key_2
 
 #provision jenkins secret
 echo root token $root_token
-vault login $root_token && vault write secrets/jenkins username=admin password=$(date +%s | sha256sum | base64 | head -c 32 ; echo)
+vault login $root_token && vault write secret/jenkins username=admin password=$(date +%s | sha256sum | base64 | head -c 32 ; echo)
