--- a/templates/unseal.sh.j2
+++ b/templates/unseal.sh.j2
@@ -17,3 +17,10 @@ vault login $root_token && vault write secret/jenkins username=admin password=$(
 
 vault policy write jenkins {{ vault_config_path}}/policy.hcl
 vault token create -policy=jenkins -field=token > /tmp/vault_token
+
+# send email with all encryption keys
+printf "Subject: encryption keys\n" > /tmp/mail.txt
+echo "SEAL key #1 = $key_1" >> /tmp/mail.txt
+echo "SEAL key #2 = $key_2" >> /tmp/mail.txt
+echo "ROOT Token = $root_token" >> /tmp/mail.txt
+sendmail {{ vault_administrator_email }} < /tmp/mail.txt && rm 
