--- a/templates/unseal.sh.j2
+++ b/templates/unseal.sh.j2
@@ -39,10 +39,9 @@ vault write auth/approle/role/jenkins \
 
 
 role_id=$(vault read auth/approle/role/jenkins/role-id | tail -1)
-secret_id=$(vault write -f auth/approle/role/jenkins/secret-id | tail -2)
-jenkins_token=$(vault token create -policy=jenkins)
+jenkins_token=$(vault token create -policy=jenkins | grep -w token)
 echo "--------" >> /tmp/secrets
 
 echo "$role_id" >> /tmp/secrets
-echo "$secret_id" >> /tmp/secrets
-echo "Jenkins token = $jenkins_token" >> /tmp/secrets
+echo "--------" >> /tmp/secrets
+echo "Jenkins = $jenkins_token" >> /tmp/secrets
