--- a/templates/unseal.sh.j2
+++ b/templates/unseal.sh.j2
@@ -44,4 +44,4 @@ echo "--------" >> /tmp/secrets
 
 echo "$role_id" >> /tmp/secrets
 echo "--------" >> /tmp/secrets
-echo "Jenkins = $jenkins_token" >> /tmp/secrets
+echo "Jenkins $jenkins_token" >> /tmp/secrets
