--- a/templates/unseal.sh.j2
+++ b/templates/unseal.sh.j2
@@ -42,5 +42,5 @@ vault write auth/approle/role/jenkins \
 role_id=$(vault read auth/approle/role/jenkins/role-id | tail -1)
 jenkins_token=$(vault token create -policy=jenkins | grep -w token)
 echo "--------" >> /tmp/secrets
-echo "Jenkins $jenkins_token" >> /tmp/secrets
-echo "Jenkins AppRole $role_id" >> /tmp/secrets
+echo "JENKINS_VAULT_TOKEN $jenkins_token" >> /tmp/secrets
+echo "JENKINS_ROLE_ID $role_id" >> /tmp/secrets
